#FIXED: Inconsistent colors desktop/laptop
REASON: Core css files (defining most colors) do not define a global "color" variable compatible with the color scheme.
Somehow a font color value gets derived from other values and is mostly illegible.
I can not explain the difference between laptop and desktop.
Maybe should study more the css color model.

--- a/stylesheet_compl.css
+++ b/stylesheet_compl.css
@@ -5,7 +5,8 @@ QWidget{
 #widgetLabel{
   margin-top: 10px;
   font-weight: bold;
-  border: 0.5px solid
+  border: 0.5px solid;
+  color:black;
 }
 
 QLineEdit{
